<resources>
    <string name="app_name">DustRadar</string>
    <string name="action_settings">Settings</string>
    <string name="action_transmit">Transmit Data</string>
    <string name="action_clear">Clear Data</string>

    <string name="videotitle_text">Swipe left/right to continue</string>

    <string name="mode_emptytitle"><b>none</b></string>
    <string name="mode_emptydescription">none</string>
    <string name="button_mode_start">Start</string>
    <string name="button_mode_starting">Starting ...</string>
    <string name="mode_blebride_title"><b>BLE Bridge</b></string>
    <string name="mode_blebride_description">The Bluetooth Low Energy (BLE) Bridge enables you to connect your Smartphone to a single DustTracker device in order to show its sensor readings. Furthermore, you can use your internet connection to upload the measurements to the OpenData infrastructure.</string>
    <string name="mode_localdisplay_title"><b>Local Display</b></string>
    <string name="mode_localdisplay_description">With Local Display you have the ability to display current and historical sensor readings of DustTracker devices within you local vicinity. Additionally, some metrics for this data are shown.</string>

    <string name="title_activity_blebridge">BLE Bridge</string>
    <string name="blebridge_devicename">Device:&#160;</string>
    <string name="blebridge_deviceaddress">Address:&#160;</string>
    <string name="blebridge_unknown_device">UNKNOWN</string>
    <string name="blebridge_switch_scan">Scanning</string>
    <string name="blebridge_button_connect">Connect</string>
    <string name="blebridge_button_connecting">Connecting</string>
    <string name="blebridge_switch_record">Recording</string>
    <string name="blebridge_switch_transmit">Transmitting</string>
    <string name="blebridge_handler_device_address">Device Address:</string>
    <string name="blebridge_ble_connection_status">BLE Status:</string>
    <string name="blebridge_gps_connection_status">GPS Status:</string>
    <string name="blebridge_stored_datapoints">Stored Datapoints:</string>
    <string name="blebridge_last_data">Last Data:</string>

    <!-- BLEBridge settings and metadata -->
    <string name="blebridge_pref_default_key">blebridge_pref_debug_key</string>
    <string name="blebridge_pref_default_title">Use default values</string>
    <string name="blebridge_pref_default_summary">This allows you to reset the settings.</string>
    <string name="blebridge_pref_default_default">false</string>

    <string name="blebridge_pref_frosturl_key">blebridge_pref_frosturl_key</string>
    <string name="blebridge_pref_frosturl_title">SensorThings Server URL</string>
    <string name="blebridge_pref_frosturl_default">http://smartaqnet.teco.edu:8080/FROST-Server</string>

    <string name="blebridge_pref_thing_id_key">blebridge_pref_thingid_key</string>
    <string name="blebridge_pref_thing_id_title">Thing ID</string>
    <string name="blebridge_pref_thing_id_default">testthing</string>

    <string name="blebridge_pref_pm_datastream_id_key">blebridge_pref_datastreamid_key</string>
    <string name="blebridge_pref_pm_datastream_id_title">PM Datastream ID</string>
    <string name="blebridge_pref_pm_datastream_id_default">testdatastream</string>

</resources>
