<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blebridge.BLEBridgeHandler">

    <Switch
        android:id="@+id/switch_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/mode_fontsize_description"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/blebridge_switch_record" />

    <Switch
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/switch_transmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/mode_fontsize_description"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/switch_record"
        app:layout_constraintBottom_toBottomOf="@id/switch_record"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/blebridge_switch_transmit" />

    <View
        android:id="@+id/ruler_1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/switch_record"/>

    <TextView
        android:id="@+id/textView_blebridge_ble_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/mode_fontsize_description"
        android:text="@string/blebridge_ble_connection_status"
        app:layout_constraintTop_toBottomOf="@id/ruler_1"
        app:layout_constraintStart_toStartOf="@id/switch_record" />

    <TextView
        android:id="@+id/textView_blebridge_gps_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/mode_fontsize_description"
        android:text="@string/blebridge_gps_connection_status"
        app:layout_constraintTop_toBottomOf="@id/textView_blebridge_ble_connection_status"
        app:layout_constraintStart_toStartOf="@id/switch_record" />

    <View
        android:id="@+id/ruler_2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textView_blebridge_gps_connection_status"/>

    <TextView
        android:id="@+id/textView_blebridge_datapoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/mode_fontsize_description"
        android:text="@string/blebridge_stored_datapoints"
        app:layout_constraintTop_toBottomOf="@id/ruler_2"
        app:layout_constraintStart_toStartOf="@id/switch_record" />

    <View
        android:id="@+id/ruler_3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textView_blebridge_datapoints"/>

    <TextView
        android:id="@+id/textView_blebridge_last_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/mode_fontsize_description"
        android:text="@string/blebridge_last_data"
        app:layout_constraintTop_toBottomOf="@id/ruler_3"
        app:layout_constraintStart_toStartOf="@id/switch_record" />

</android.support.constraint.ConstraintLayout>