<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <TextView
        android:id="@+id/textView_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/mode_text_padding"
        android:paddingEnd="@dimen/mode_text_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/mode_fontsize_title"
        android:text="@string/mode_emptytitle"
        app:layout_constraintBottom_toTopOf="@id/guideline_mode_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_mode_title" />

    <TextView
        android:id="@+id/textView_mode_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/mode_text_padding"
        android:paddingEnd="@dimen/mode_text_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/mode_fontsize_description"
        android:text="@string/mode_emptydescription"
        app:layout_constraintBottom_toTopOf="@id/button_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_mode_title" />

    <Button
        android:id="@+id/button_mode"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:textSize="@dimen/mode_fontsize_description"
        android:text="@string/button_mode_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="OnStartButtonClick"/>

</android.support.constraint.ConstraintLayout>